setting up files

--- a/index.html
+++ b/index.html
@@ -2,11 +2,36 @@
 <html> 
 
 <head>
-    <meta charset=utf-8/>
+
+    <!-- link stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- link d3 library -->
+    <script src="js/d3.v6.1.1/d3.min.js"></script>
+
+    <!-- add title -->
+    <title>ic-07</title>
+
 </head>
 
 
 <body>
+
+    <!-- add header -->
+    <h1>D3 Part 1</h1>
+
+    <!-- create div for visualization -->
+    <div id="ic-vis">
+
+    </div>
+
+    <!-- add acknowledgements -->
+    <h2>Acknowledgements</h2>
+    <div>
+        <ul>
+            <li>Class notes from Monday!</li>
+        </ul>
+    </div>
 
 
 </body>
